Fix broken input placeholders

--- a/resources/less/forum/extension.less
+++ b/resources/less/forum/extension.less
@@ -241,7 +241,7 @@ body.dark {
     :-ms-input-placeholder,
     ::-webkit-input-placeholder,
     ::placeholder {
-        color: @medium-text;
+        color: @medium-text !important;
     }
 
     .Composer,
